# currency-exchange-rust-demo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: command.rs  main.rs  response.rs
src/interactive/: shell.rs
src/operations/: check.rs  convert.rs  list.rs  mod.rs  quota.rs
src/response/: currency_details.rs  currency_pair.rs  list_response.rs  mod.rs  quota.rs
src/util/: client.rs  error.rs  mock_middleware.rs  mod.rs  time.rs
