[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.35", features=["serde"]}
clap = {version="4.5.2", features=["derive"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
http-cache-reqwest = "0.13.0"
reqwest = {version="0.11.25", features = ["blocking", "json"]}
reqwest-middleware = "0.2.4"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0"
tokio = {version="1.36.0", features=["rt", "macros"]}
