[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.35", features=["serde"]}
clap = {version="4.5.2", features=["derive"]}
dialoguer = {version="0.11.0", features=["fuzzy-select"]}
dotenv_codegen = "0.15.0"
http = "0.2.12"
http-cache-reqwest = "0.13.0"
reqwest = {version="0.11.26", features = ["blocking", "json"]}
reqwest-middleware = "0.2.4"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0"
task-local-extensions = "0.1.4"
tokio = {version="1.36.0", features=["rt", "macros"]}

[[bin]]
path = "src/main.rs"
name = "exchange"